WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213452
[Win] fast/dom/Window/alert-with-unmatched-utf16-surrogate-should-not-crash.html is failing
https://bugs.webkit.org/show_bug.cgi?id=213452
Summary
[Win] fast/dom/Window/alert-with-unmatched-utf16-surrogate-should-not-crash.h...
Fujii Hironori
Reported
2020-06-21 21:29:58 PDT
[Win][WTR] fast/dom/Window/alert-with-unmatched-utf16-surrogate-should-not-crash.html is failing Since it was added in
Bug 213269
.
Attachments
Patch
(3.90 KB, patch)
2020-06-21 21:39 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Patch
(3.86 KB, patch)
2020-06-21 21:40 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Patch
(5.82 KB, patch)
2020-06-21 22:04 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Patch
(5.89 KB, patch)
2020-06-22 12:40 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2020-06-21 21:39:13 PDT
Created
attachment 402443
[details]
Patch
Fujii Hironori
Comment 2
2020-06-21 21:40:13 PDT
Created
attachment 402444
[details]
Patch
Fujii Hironori
Comment 3
2020-06-21 22:04:02 PDT
Created
attachment 402445
[details]
Patch
Darin Adler
Comment 4
2020-06-22 08:07:37 PDT
Comment on
attachment 402445
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=402445&action=review
> Tools/DumpRenderTree/win/UIDelegate.cpp:458 > + // Return "(null)" for an invalid UTF-16 sequence
Why not “invalid”? Not sure why we call an invalid sequence null.
Fujii Hironori
Comment 5
2020-06-22 12:27:48 PDT
Comment on
attachment 402445
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=402445&action=review
>> Tools/DumpRenderTree/win/UIDelegate.cpp:458 >> + // Return "(null)" for an invalid UTF-16 sequence > > Why not “invalid”? Not sure why we call an invalid sequence null.
WinCairo is supporting both WK1 and WK2. DRT should behave same with WTR. See
Bug 213269
for WTR.
Darin Adler
Comment 6
2020-06-22 12:35:49 PDT
Then the comment should say why. Generally speaking, comments purpose is to answer the question "why". The code itself answers the question "what".
Fujii Hironori
Comment 7
2020-06-22 12:40:22 PDT
Created
attachment 402495
[details]
Patch
Fujii Hironori
Comment 8
2020-06-22 12:43:09 PDT
(In reply to Darin Adler from
comment #6
)
> Then the comment should say why. Generally speaking, comments purpose is to > answer the question "why". The code itself answers the question "what".
Agreed. Fixed. Thank you.
Yusuke Suzuki
Comment 9
2020-06-22 17:36:13 PDT
Comment on
attachment 402495
[details]
Patch Nice!
Fujii Hironori
Comment 10
2020-06-22 18:23:39 PDT
Comment on
attachment 402495
[details]
Patch Clearing flags on attachment: 402495 Committed
r263379
: <
https://trac.webkit.org/changeset/263379
>
Fujii Hironori
Comment 11
2020-06-22 18:23:43 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 12
2020-06-22 18:24:21 PDT
<
rdar://problem/64618144
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug