[Win] fast/dom/Window/alert-with-unmatched-utf16-surrogate-should-not-crash.html is failing https://bugs.webkit.org/show_bug.cgi?id=213452

Reviewed by Yusuke Suzuki.

Tools:

If window.alert() was given an invalid UTF-16 sequence, Windows
DumpRenderTree output it without any conversions. It should output
"(null)" to match with WebKitTestRunner behavior.

* DumpRenderTree/win/UIDelegate.cpp:
(toMessage): Added
(UIDelegate::runJavaScriptAlertPanelWithMessage):
(UIDelegate::runJavaScriptConfirmPanelWithMessage):
(UIDelegate::runJavaScriptTextInputPanelWithPrompt):
(UIDelegate::runBeforeUnloadConfirmPanelWithMessage):
(UIDelegate::setStatusText):

LayoutTests:

* platform/win/fast/dom/Window/alert-with-unmatched-utf16-surrogate-should-not-crash-expected.txt: Removed.
* platform/wincairo/fast/dom/Window/alert-with-unmatched-utf16-surrogate-should-not-crash-expected.txt: Removed.

Canonical link: https://commits.webkit.org/226285@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263379 268f45cc-cd09-0410-ab3c-d52691b4dbfc